# fast-wireguard

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  DEMO.md  I18N.md  INSTALL.md  QUICK_START.md  README.md  env.example  fastwg.py  install-hooks.sh  install.sh  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_fastwg.py  test_import.py  update.sh
.github/workflows/: README.md  lint.yml  release.yml  tests.yml
docs/: README.md
docs/en/: INSTALL.md  QUICK_START.md  README.md  development.md
docs/i18n/: README.md  ru.md
docs/ru/: DEMO.md  README.md  development.md
fastwg/: __init__.py  cli.py
fastwg/core/: __init__.py  database.py  wireguard.py
fastwg/locale/: fastwg.pot
fastwg/locale/ru/LC_MESSAGES/: fastwg.mo  fastwg.po
fastwg/models/: client.py  server.py
fastwg/utils/: __init__.py  i18n.py
tests/: test_client_config_generation.py  test_config_import.py  test_connection_status.py  test_database.py  test_ip_allocation.py  test_server_init.py
