[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastwg"
version = "1.1.0"
description = "Fast WireGuard server management via CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "wolfDiesel", email = "wolfdiesel@example.com"}
]
keywords = ["wireguard", "vpn", "cli", "server", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",

    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=8.0.0",
    "cryptography>=42.0.0",
    "pyqrcode>=1.2.1",
    "pypng>=0.20220715.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "configobj>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "types-tabulate>=0.9.0",
    "flake8>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0",
]

[project.scripts]
fastwg = "fastwg.cli:cli"

[project.urls]
Homepage = "https://github.com/wolfDiesel/fast-wireguard"
Repository = "https://github.com/wolfDiesel/fast-wireguard"
Issues = "https://github.com/wolfDiesel/fast-wireguard/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
